# so-scrapper

./: .gitignore  README.md  inspection.md  main.py  pyproject.toml  setup.py
eda/: datascience.ipynb  newest.ipynb  text_mining.py
handle_io/: api.json  export.json  export.py  import.py  scrapper.json  sync_db.py
src/: api.py  data.ipynb  database.py  delete_scrapper.py  eda.ipynb  import.py  scraper.py  scrapper.py  utils.py
tests/: test_api.py  test_body.html  test_scraper.py  test_scrapper.py
